--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,13 @@
 <resources>
     <string name="app_name">OMDB</string>
     <string name="title_home">Home</string>
-    <string name="title_dashboard">Dashboard</string>
-    <string name="title_notifications">Notifications</string>
+    <string name="title_favorites">Favorites</string>
+    <string name="title_label">Title</string>
+    <string name="year">Year</string>
+    <string name="id">id</string>
+    <string name="search_label">Search</string>
+    <string name="sample_movie_name">Spider man</string>
+    <string name="sample_director_name">Amit Masurkar</string>
+    <string name="sample_movie_plot">" teenage boy with a sex therapist mother teams up with a high school classmate to set up an underground sex therapy clinic at school."</string>
+    <string name="sample_movie_year">2022</string>
 </resources>
