--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="sample_director_name">Amit Masurkar</string>
     <string name="sample_movie_plot">" teenage boy with a sex therapist mother teams up with a high school classmate to set up an underground sex therapy clinic at school."</string>
     <string name="sample_movie_year">2022</string>
+    <string name="no_favorites">No favorites found</string>
 </resources>
